# tinycthread

./: meson.build
src/: tinycthread.c  tinycthread.h
test/: hello.c  meson.build  test.c
